tg-5552 Elimina la carga de traducciones por flavor

--- a/front-end/apps/projects/hospital/src/app/app.component.html
+++ b/front-end/apps/projects/hospital/src/app/app.component.html
@@ -3,7 +3,7 @@
 		<app-exchangeable-theme class="theme-button" (themeChanged)="selectedTheme = $event"> </app-exchangeable-theme>
 	</div>
 
-	<div class="app mat-typography mat-app-background" [ngClass]="publicInfo.flavor" [ngClass]="selectedTheme?.class">
+	<div class="app mat-typography mat-app-background" [ngClass]="selectedTheme?.class">
 		<router-outlet> </router-outlet>
 	</div>
 </ng-container>
