tg-5554 [FE] Agrega botón de contrarreferancia a la notificación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference-notification/reference-notification.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference-notification/reference-notification.component.html
@@ -38,6 +38,12 @@
                 <span>{{reference.referenceDate.day}}/{{reference.referenceDate.month}}/{{reference.referenceDate.year}}</span>
             </div>
 
+            <div align="end" fxFlex="50px">
+                <button mat-raised-button color="primary">
+                    <span [translate]="'ambulatoria.paciente.reference-notification.COUNTERREFERENCE'"></span>
+                </button>
+            </div>
+
         </div>
         
     </mat-dialog-content>
