--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference-notification/reference-notification.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference-notification/reference-notification.component.html
@@ -39,7 +39,7 @@
             </div>
 
             <div align="end" fxFlex="50px">
-                <button mat-raised-button color="primary">
+                <button mat-raised-button color="primary" (click)="goToCounterreference(reference)">
                     <span [translate]="'ambulatoria.paciente.reference-notification.COUNTERREFERENCE'"></span>
                 </button>
             </div>
