tg-5567 Elimina los FF definidos en el front-end como activos siempre

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
@@ -54,7 +54,7 @@
 						</mat-form-field>
 					</ng-template>
 				</div>
-				<div *appFeatureFlag="'habilitarToggleFiltroDiagnosticoPrincipal'" class="main-diagnosis-toggle">
+				<div class="main-diagnosis-toggle">
 					<mat-label>Diagnóstico principal</mat-label>
 					<mat-slide-toggle formControlName="mainDiagnosisOnly" (change)="updateDocuments()">
 					</mat-slide-toggle>
