tg-5568 Mueve al BE el FF AGREGAR_MEDICOS_ADICIONALES

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/diagnosis-summary/diagnosis-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/diagnosis-summary/diagnosis-summary.component.html
@@ -1,5 +1,4 @@
-<app-summary-card [header]="diagnosticosSummary" [hasCovidAlert]="viewCovidAlert"
-	(covidAlertEvent)="generateDiagnosisCovid()">
+<app-summary-card [header]="diagnosticosSummary" >
 	<app-table [model]="tableModel" *ngIf="tableModel?.data.length > 0 else noInfo"></app-table>
 	<ng-template #noInfo>
 		<app-no-data></app-no-data>
