tg-5594 Fix error en consola al cambiar de menú de extensiones

--- a/front-end/apps/projects/hospital/src/app/modules/extensions/routes/extension/extension.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/extensions/routes/extension/extension.component.html
@@ -1,5 +1,5 @@
 <app-content>
-	<ng-container *ngIf="!fetching && (page$ | async) as page; else loading">
+	<ng-container *ngIf="(page$ | async) as page; else loading">
 		<app-page-layout [page]="page"></app-page-layout>
 	</ng-container>
 	<ng-template #loading>
