--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.html
@@ -17,29 +17,42 @@
 			</span>
 		</div>
 	</div>
-	<form [formGroup]="form" (submit)="reportProblem(form.value.manualClassification)">
-		<div fxLayout="row" fxLayoutAlign="center">
-			<div fxLayout="row" fxLayoutAlign="center center" fxFlex="80">
-				<mat-form-field appearance="outline" fxFlex="100">
-					<mat-label>
-						{{ 'ambulatoria.paciente.problemas.epidemiological_report.CASE_CLASSIFICATION' | translate}}
-					</mat-label>
-					<mat-select formControlName="manualClassification">
-						<mat-option *ngFor="let classification of data.manualClassificationList" [value]="classification.id"
-							matTooltip="{{ classification.description }}">
-							{{classification.description}}
-						</mat-option>
-					</mat-select>
-					<mat-error [translate]="'forms.REQUIRED'"></mat-error>
-				</mat-form-field>
+
+	<form [formGroup]="form" (submit)="reportProblem()">
+
+		<ng-container fxLayout="column" fxLayoutGap="15px">
+			<div formArrayName="classifications" *ngFor="let eventClassification of data.snvsEventManualClassificationsList; let i=index">
+				<div fxLayout="row" fxLayoutAlign="center">
+					<div fxLayout="row" fxLayoutAlign="start center" fxFlex="80">
+						<span class="mat-h4 margin-0">{{ data.snvsEventManualClassificationsList[i].snvsEvent.description }}</span>
+					</div>
+				</div>
+				<div fxLayout="row" fxLayoutAlign="center">
+					<div fxLayout="row" fxLayoutAlign="center center" fxFlex="80">
+						<mat-form-field appearance="outline" fxFlex="100">
+							<mat-label>
+								{{ 'ambulatoria.paciente.problemas.epidemiological_report.CASE_CLASSIFICATION' | translate}}
+							</mat-label>
+							<mat-select formControlName="{{i}}">
+								<mat-option *ngFor="let classification of data.snvsEventManualClassificationsList[i].manualClassifications" [value]="classification.id"
+									matTooltip="{{ classification.description }}">
+									{{classification.description}}
+								</mat-option>
+							</mat-select>
+						</mat-form-field>
+					</div>
+				</div>
 			</div>
-		</div>
+			<span *ngIf="tryToSubmit" class="color-warn mat-h5 margin-0">
+				{{ 'ambulatoria.paciente.problemas.epidemiological_report.MIN_ONE_REQUIRED_ERROR' | translate }}
+			</span>
+		</ng-container>
 
 
 		<div fxLayout="row" fxLayoutAlign="center">
 			<div fxLayout="row" fxLayoutAlign="center center" fxFlex="80">
 				<mat-dialog-actions fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-					<button mat-stroked-button color="warn" (click)="doNotReportProblem()">
+					<button type="button" mat-stroked-button color="warn" (click)="doNotReportProblem()">
 						<span [translate]="'ambulatoria.paciente.problemas.epidemiological_report.buttons.CANCEL_REPORT'"></span>
 					</button>
 					<button mat-raised-button color="primary" type="submit">
