tg-5582 Refactoriza logs, borra imports no usados

--- a/front-end/apps/projects/hospital/src/app/modules/extensions/components/ui-component-list/ui-component-list.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/extensions/components/ui-component-list/ui-component-list.component.html
@@ -1,5 +1,8 @@
 
-<div *ngFor="let uiComponent of list" >
+<div
+	*ngFor="let uiComponent of list"
+	class="row"
+	>
 	<app-ui-component [uiComponent]="uiComponent" ></app-ui-component>
 </div>
 
