--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference/reference.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference/reference.component.scss
@@ -6,14 +6,14 @@
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 
 	::ng-deep .mat-form-field-wrapper {
-		padding-bottom: 1.0em;
+		padding-bottom: 1.2em;
 	}
 
 }
 
 h2 {
 	width: 400px;
-	height: 40px;
+	height: 50px;
 	font-weight: 500;
 	font-size: 20px;
 }
@@ -26,10 +26,6 @@ h2 {
 	font-size: 15px;
 	font-weight: 500;
 	cursor: pointer;
-}
-
-.associated-problem{
-	margin-bottom: 30px;
 }
 
 .close{
@@ -61,4 +57,9 @@ h2 {
 .example-additional-selection {
 	opacity: 0.75;
 	font-size: 0.75em;
+}
+
+.mat-dialog-actions {
+	padding: 0px 0px;
+	margin-top: 5px;
 }
