tg-5608 [FE] Agrega a la notificacion de referencia los archivos adjuntos de cada referencia

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference-notification/reference-notification.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference-notification/reference-notification.component.html
@@ -33,6 +33,13 @@
 
             <span *ngIf="reference.note.description">“{{reference.note.description}}”</span>
 
+            <div class="primary" *ngFor="let file of reference.files" fxLayout="row">
+                <mat-icon>attachment_icon</mat-icon>
+                <span class="span-clickable" (click)="downloadReferenceFile(file)">
+                    {{file.fileName}}
+                </span>
+            </div>
+
             <div class="grayText" fxLayout="row" fxLayoutAlign="space-between center" fxFlex="50px">
                 <span>{{reference.professional.firstName}} {{reference.professional.lastName}}</span>
                 <span>{{reference.referenceDate.day}}/{{reference.referenceDate.month}}/{{reference.referenceDate.year}}</span>
