--- a/front-end/apps/projects/hospital/src/app/modules/extensions/components/ui-component/ui-component.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/extensions/components/ui-component/ui-component.component.html
@@ -15,6 +15,19 @@
 			</ng-container>
 		</a>
 	</div>
+	<div *ngSwitchCase="'cubejs-dashboard'">
+		<app-cubejs-dashboard
+			[content]="uiComponent.args.content"
+		>
+		</app-cubejs-dashboard>
+	</div>
+	<div *ngSwitchCase="'cubejs-chart'">
+		<app-cubejs-chart
+			[query]="uiComponent.args.query"
+			[dateFormat]="uiComponent.args.dateFormat"
+		>
+		</app-cubejs-chart>
+	</div>
 	<div *ngSwitchCase="'tabs'">
 		<app-tabs [tabs]="uiComponent.args.tabs"></app-tabs>
 	</div>
