--- a/front-end/apps/projects/hospital/src/styles.scss
+++ b/front-end/apps/projects/hospital/src/styles.scss
@@ -11,6 +11,18 @@ body {
 	padding: 0;
 }
 
+body noscript {
+	display: block;
+	padding: 5% 10%;
+	margin: auto 0;
+
+	text-align: center;
+
+	img {
+		max-width: 500px;
+	}
+}
+
 h2.page-title {
 	font-size: x-large;
 }
