tg-5689 [MEJORA]  Agregar espacios en card y pop up

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -113,7 +113,7 @@
 							<div content>
 								<ng-container *ngIf="hasAssignedProfessions else noInfo">
 									<div fxLayout="column" fxLayoutGap="10px">
-										<div fxLayout="column" fxLayoutGap="5px">
+										<div class="sub-title" fxLayout="column" fxLayoutGap="5px">
 											<strong [translate]="'pacientes.user_data.LICENCE'"></strong>
 											<div>{{license}}</div>
 										</div>
