--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.scss
@@ -8,7 +8,6 @@ div {
 	line-height: 14px;
 	letter-spacing: 0em;
 	text-align: left;
-	margin-top: 10px;
 	height: 5px;
 }
 
@@ -56,4 +55,8 @@ div {
 	position: absolute;
 	top: 0px;
 	right: 0px;
+}
+
+.select-surfaces {
+	color: #A8A8A8;
 }
