tg-5721 Devuelvo la dependencia a todo Material

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -314,6 +314,7 @@
 								<mat-icon>close</mat-icon>
 							</button>
 						</mat-form-field>
+						<!--Ver -->
 
 						<mat-form-field appearance="outline">
 							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.OBSERVACIONES'"></mat-label>
@@ -626,7 +627,7 @@
 		<div id="solicitud-referencia" class="referencia" fxLayout="column" fxLayoutGap="10px">
 			<h2 [translate]="'ambulatoria.paciente.nueva-consulta.solicitud-referencia.TITLE'"></h2>
 			<span class="primary" [translate]="'ambulatoria.paciente.nueva-consulta.solicitud-referencia.ADD_REQUEST'" (click)="ambulatoryConsultationReferenceService.openReferenceDialog()"></span>
-				<app-document-section-table data-display 
+				<app-document-section-table data-display
 												[columns]="ambulatoryConsultationReferenceService.getColumns()"
 												[data]="ambulatoryConsultationReferenceService.getData()">
 				</app-document-section-table>
