tg-5751 Cambiar textos en el login

--- a/front-end/apps/projects/hospital/src/app/modules/auth/routes/login/login.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/routes/login/login.component.html
@@ -1,7 +1,7 @@
 <app-content width="narrow">
 	<form [formGroup]="form" (ngSubmit)="submit()">
 		<mat-card>
-			<mat-card-header>
+			<mat-card-header fxLayoutAlign="center center" style="padding: 15px;">
 				<mat-card-title>
 					<span translate="auth.login.form.TITLE"></span>
 				</mat-card-title>
