tg-5596 [P2] Error de consola al agregar medicación en nueva consulta.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -314,12 +314,11 @@
 								<mat-icon>close</mat-icon>
 							</button>
 						</mat-form-field>
-						<!--Ver -->
 
 						<mat-form-field appearance="outline">
 							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.OBSERVACIONES'"></mat-label>
-							<textarea matInput type="text" id="observations" name="Estado"
-									  formControlName="suspended"
+							<textarea matInput type="text" id="observations" name="observaciones"
+									  formControlName="observaciones"
 									  placeholder="Descripción"
 							>
 							</textarea>
