--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
@@ -77,4 +77,26 @@
     }
 }
 
+.dose {
+	border-radius: 6px;
+    padding: 4px 17px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 19px;
+    width: 163px;
+    text-align:center;
+}
+
+.reference-request {
+    background-color: #ffcece;
+    color: #EB5757;
+}
+
+
+.span-clickable {    
+	font-size: 15px;
+	font-weight: 500;
+	cursor: pointer;
+}
+
 
