tg-3150 Agrega documentación App

--- a/front-end/apps/projects/hospital/src/app/app.component.html
+++ b/front-end/apps/projects/hospital/src/app/app.component.html
@@ -1,9 +1,9 @@
 
-<div *ngIf="isExchangeableTheme$ | async" fxLayout="row" fxLayoutAlign="end" class=" mat-app-background" [ngClass]="selectedTheme?.class">
+<div *ngIf="isExchangeableTheme$ | async" fxLayout="row" fxLayoutAlign="end" [ngClass]="selectedTheme?.class">
 	<app-exchangeable-theme class="theme-button" (themeChanged)="selectedTheme = $event"> </app-exchangeable-theme>
 </div>
 
-<div class="app mat-typography mat-app-background" [ngClass]="selectedTheme?.class">
-	<router-outlet> </router-outlet>
+<div [ngClass]="selectedTheme?.class">
+	<router-outlet></router-outlet>
 </div>
 
