--- a/front-end/apps/projects/hospital/src/app/modules/institucion/routes/home/home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/institucion/routes/home/home.component.html
@@ -7,6 +7,9 @@
 		<mat-card-content>
 
 		</mat-card-content>
+		<mat-card-actions>
+			<button mat-button (click)="switchInstitution()">CAMBIAR DE INSTITUCIÓN</button>
+		  </mat-card-actions>
 	</mat-card>
 	<ng-template #loading>
 		<mat-progress-bar mode="indeterminate"></mat-progress-bar>
