tg-5780 Mover institución en Menú

--- a/front-end/apps/projects/hospital/src/app/modules/institucion/institucion.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/institucion/institucion.component.html
@@ -1,5 +1,11 @@
 <ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
-	<app-main-layout [menuItems]="menuItems" [menuFooterItems]="menuFooterItems"></app-main-layout>
+	<app-main-layout [menuItems]="menuItems" [userInfo]="menuFooterItems.user">
+			<app-location-badge
+				location-info
+				[location]="menuFooterItems.institution"
+				(click)="institutionHome()"
+			></app-location-badge>
+	</app-main-layout>
 </ng-container>
 <ng-template #loading>
 	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
