--- a/front-end/apps/projects/hospital/src/app/modules/portal-paciente/portal-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/portal-paciente/portal-paciente.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="menuItems; else loading">
-	<app-main-layout [menuItems]="menuItems" [menuFooterItems]="menuFooterItems"></app-main-layout>
+	<app-main-layout [menuItems]="menuItems" [userInfo]="userInfo"></app-main-layout>
 </ng-container>
 <ng-template #loading>
 	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
