--- a/front-end/apps/projects/hospital/src/app/modules/institucion/routes/home/home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/institucion/routes/home/home.component.html
@@ -2,13 +2,12 @@
 	<mat-card *ngIf="(institucion$ | async) as institucion; else loading">
 		<mat-card-header>
 			<mat-card-title>{{institucion.name}}</mat-card-title>
-			<mat-card-subtitle translate="institucion.home.TITLE"></mat-card-subtitle>
+			<mat-card-subtitle>{{address(institucion)}}</mat-card-subtitle>
 		</mat-card-header>
 		<mat-card-content>
-
 		</mat-card-content>
 		<mat-card-actions>
-			<button mat-button (click)="switchInstitution()">CAMBIAR DE INSTITUCIÓN</button>
+			<button mat-button color="primary" (click)="switchInstitution()">CAMBIAR DE INSTITUCIÓN</button>
 		  </mat-card-actions>
 	</mat-card>
 	<ng-template #loading>
